# datetimecalc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check.yml  docs.yml  wheel.yml
docs/: tz.md
docs/datetimecalc/: functions.md  index.md
man/: datetimecalc.1  extra-sections.man
src/datetimecalc/: __init__.py  __main__.py  functions.py  timedelta.py  tz.py
