[project]
name = "datetimecalc"
version = "0.1.0"
requires-python = ">=3.12"
description = "calculator for datetimes and timedeltas"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Backplane", email = "actualben@users.noreply.github.com"},
]
keywords = ["datetime", "timedelta", "date", "time", "calculator", "natural-language"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
    "parsedatetime>=2.6",
]

[project.urls]
Homepage = "https://github.com/backplane/datetimecalc"
Documentation = "https://www.backplane.be/datetimecalc/"
Repository = "https://github.com/backplane/datetimecalc.git"
Changelog = "https://github.com/backplane/datetimecalc/releases"

[project.scripts]
datetimecalc = "datetimecalc:__main__.main"

[tool.pytest.ini_options]
addopts = "--doctest-modules src"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
pythonpath = "src/"

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pdoc3>=0.11.1",
]
